feat:"Logo svg 파일 적용"

--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="src/assets/Symbol_of_Daegu.svg"
+    />
+    <title>대구시 아동급식카드 사용처</title>
     <script
       type="text/javascript"
       src="https://oapi.map.naver.com/openapi/v3/maps.js?ncpClientId=aw99452he2"
