--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="src/assets/Symbol_of_Daegu.svg"
-    />
+    <link rel="icon" type="image/svg+xml" href="/assets/Symbol_of_Daegu.svg" />
     <title>대구시 아동급식카드 사용처</title>
     <script
       type="text/javascript"
