fix: seo와 접근성 향상을 위한 수정

--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="/assets/Symbol_of_Daegu.svg" />
-    <title>대구시 아동급식카드 사용처</title>
+    <meta
+      name="description"
+      content="대구광역시의 아동급식카드 사용처를 간편하게 확인해보세요"
+    />
     <script
       type="text/javascript"
       src="https://oapi.map.naver.com/openapi/v3/maps.js?ncpClientId=aw99452he2"
     ></script>
+    <title>대구시 아동급식카드 사용처</title>
   </head>
   <body>
     <div id="root"></div>
